force-app/main/default/objects/Booking_Seat__c/Booking_Seat__c.object-meta.xml
<CustomObject>
    <description>Individual seat reservation within a seated/group booking</description>
    <label>Booking Seat</label>
    <nameField>
        <displayFormat>SEAT-{00000}</displayFormat>
        <label>Seat ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Seats</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>