force-app/main/default/objects/Booking_Seat__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Reserved</fullName><default>true</default><label>Reserved</label></value>
            <value><fullName>Cancelled</fullName><default>false</default><label>Cancelled</label></value>
            <value><fullName>Attended</fullName><default>false</default><label>Attended</label></value>
            <value><fullName>No_Show</fullName><default>false</default><label>No Show</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>